--- a/style.css
+++ b/style.css
@@ -260,6 +260,238 @@ h1::after{
 }
 
 
+
+/* price plan */
+#price{
+padding:40px 0;
+background:#efefef;
+
+}
+
+.single-price{
+  margin:10px 0;
+  background-color: #fff;
+  float:left;
+  width:100%;
+  transition: 0.5s;
+}
+.single-price:hover{
+  box-shadow: 0 2px 20px #333;
+
+}
+
+.price-head{
+  background-color: #2196f3;
+  float:left;
+  width:100%;
+  padding: 10px 5px;
+  display: inline;
+  text-align: center;
+
+}
+
+.price-head h2 {
+  color:#fff;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  padding: 5px;
+  text-transform: uppercase;
+}
+
+.price-head p {
+
+  font-size: 25px;
+  color: #ccc;
+  font-weight: bold;
+  line-height: 30px;
+}
+
+#price span{
+  font-size: 15px;
+}
+
+.price-content{
+  width: 100%;
+  padding: 0 15px;
+  float: left;
+  display: inline;
+}
+
+.price-content ul li {
+  list-style: none;
+  border-bottom: 1px solid #efefef;
+  padding: 15px 10px;
+}
+
+ul li:last-child{
+
+  border:none;
+}
+
+.fa-check-circle{
+
+  color: green;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.fa-times-circle{
+
+  color: red;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.price-btn{
+  width: 100%;
+  float: left;
+  text-align: center;
+  padding: 15px 15px 30px;
+  display: inline;
+}
+
+
+.buy-btn{
+  background-color: #2196f3;
+  border-radius: 3px;
+  display: inline-block;
+  font-size: 18px;
+  padding: 15px 50px;
+  transition:0.5s;
+
+}
+.buy-btn:hover{
+  border-color: 1px solid #fff;
+  background-color: #3f51b5;
+}
+
+.price-btn a{
+  color: #fff!important;
+  text-decoration: none!important;
+}
+
+#testimonials{
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#testimonials .row{
+  margin-top:30px;
+}
+ .col-md-4{
+  margin: 40px auto;
+}
+
+.profile{
+  padding: 70px 10px 10px;
+  background-color: #efefef;
+}
+
+.user{
+
+  width:100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.profile img {
+
+  top:-60px;
+  position: absolute;
+  left: calc(50% - 60px);
+  border: 1px solid #fff;
+}
+
+.profile h3{
+
+  font-size: 20px;
+  margin-top: 15px;
+  color: #007bff;
+}
+
+#testimonials span{
+  font-size: 12px;
+  color: #333;
+}
+
+blockquote{
+  font-size: 20px;
+  line-height: 30px
+}
+
+blockquote::before{
+  content:'\93';
+  font-size: 50px;
+  color: #007bff;
+  position: relative;
+  line-height: 20px;
+  bottom: -15px;
+  right:5px;
+
+}
+
+blockquote::after{
+  content:'\94';
+  font-size: 50px;
+  color: #007bff;
+  position: relative;
+  line-height: 10px;
+  bottom: -15px;
+  left:5px;
+
+}
+.profile:hover{
+
+  box-shadow: 0 0 15px 15px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+
+/* get in touch */
+#contact{
+  background:#efefef;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  color: #777;
+}
+
+.contact-form{
+  padding:15px;
+}
+
+
+.form-control{
+  border-radius: 0!important;
+  border:none!important;
+}
+
+::placeholder{
+  color:#999!important;
+}
+
+.follow{
+  background: #fff;
+  padding: 10px;
+  margin: 15px;
+}
+
+.contact-info .fa{
+
+    margin:10px;
+    color:#007bff;
+    font-weight: bold;
+
+}
+
+#footer{
+  background: #333;
+  color: #fff;
+  padding: 12px;
+}
+/*
+media */
+
 @media screen and (max-width:768px) {
 
   @-ms-viewport {
